--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.8.4",
     "cookies-next": "^5.1.0",
     "dayjs": "^1.11.13",
+    "framer-motion": "^12.6.3",
     "jose": "^6.0.10",
     "jotai": "^2.12.2",
     "next": "15.2.4",
